# waga

./: .gitattributes  .gitignore  README.md  pyproject.toml
assets/images/: MAPOWANIE.csv  MODYFIKACJE.txt  README_PL.txt  mapowanie.json
config/: products.csv
docs/: ARCHITECTURE.md  README.md  REQUIREMENTS.md
src/cash_assistant/: __init__.py  main.py
src/cash_assistant/controller/: __init__.py  app_controller.py  keyboard_controller.py  labels.py  time.py  view_state.py
src/cash_assistant/core/: __init__.py  cart.py  money.py  product.py  sale.py
src/cash_assistant/data/: __init__.py  database.py  product_csv_sync.py  product_repository.py  sale_repository.py
src/cash_assistant/hardware/: __init__.py  mock_scale.py  scale.py
src/cash_assistant/ui/: formatters.py  history_screen.py  main_window.py  sales_screen.py  settings_screen.py
tests/: test_app_controller.py  test_cart.py  test_database.py  test_formatters.py  test_keyboard_controller.py  test_money.py  test_product.py  test_product_csv_sync.py  test_product_repository.py  test_sale.py  test_sale_repository.py  test_scale.py  test_time.py  test_ui_boundaries.py  test_view_state.py
